--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apirtc/apirtc": "^5.0.17",
+    "@apizee/apirtc": "^4.6.5",
     "@babel/polyfill": "^7.11.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
